Fix #72 - lower z-index of banner

--- a/src/less/import/main.less
+++ b/src/less/import/main.less
@@ -78,7 +78,7 @@ header {
     }
     .header-bottom {
         position: relative;
-        z-index: 2000;
+        z-index: 1;
     }
     &.smaller {
         padding: 0 20px 0 50px;
